// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context Menu should initially be hidden 1`] = `
HTMLCollection [
  <div
    class="ag-charts-context-menu"
    style="display: none;"
  />,
]
`;

exports[`Context Menu should show the default actions mouse 1`] = `
HTMLCollection [
  <div
    class="ag-charts-context-menu"
    style="display: block; left: 0px; top: calc(0px - 0.5em);"
  >
    <div
      aria-orientation="vertical"
      class="ag-charts-context-menu__menu"
      role="menu"
      tabindex="-1"
    >
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Download
        </div>
        <div
          class="ag-charts-context-menu__chevron-right"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Context Menu should show the default actions touch 1`] = `
HTMLCollection [
  <div
    class="ag-charts-context-menu"
    style="display: block; left: 0px; top: calc(0px - 0.5em);"
  >
    <div
      aria-orientation="vertical"
      class="ag-charts-context-menu__menu"
      role="menu"
      tabindex="-1"
    >
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Download
        </div>
        <div
          class="ag-charts-context-menu__chevron-right"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Context Menu should show the legend actions mouse 1`] = `
HTMLCollection [
  <div
    class="ag-charts-context-menu"
    style="display: block; left: 0px; top: calc(0px - 0.5em);"
  >
    <div
      aria-orientation="vertical"
      class="ag-charts-context-menu__menu"
      role="menu"
      tabindex="-1"
    >
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Download
        </div>
        <div
          class="ag-charts-context-menu__chevron-right"
        />
      </div>
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Toggle Visibility
        </div>
        <div
          class="ag-charts-context-menu__chevron-right"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Context Menu should show the legend actions touch 1`] = `
HTMLCollection [
  <div
    class="ag-charts-context-menu"
    style="display: block; top: calc(NaNpx - 0.5em);"
  >
    <div
      aria-orientation="vertical"
      class="ag-charts-context-menu__menu"
      role="menu"
      tabindex="-1"
    >
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Download
        </div>
        <div
          class="ag-charts-context-menu__chevron-right"
        />
      </div>
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Toggle Visibility
        </div>
        <div
          class="ag-charts-context-menu__chevron-right"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Context Menu submenu cycle detection 1`] = `
[
  [
    "AG Charts - cycle detected in array",
    {
      "items": [
        {
          "action": [Function],
          "label": "subaction",
          "type": "action",
        },
        {
          "items": [
            "defaults",
            "separator",
            {
              "action": [Function],
              "label": "my action",
              "type": "action",
            },
            [Circular],
          ],
          "label": "subsubmenu",
        },
      ],
      "label": "my submenu",
    },
  ],
]
`;
